<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">TIC-Chat</string>

    <string name="text_login_title">登陆</string>
    <string name="text_login_account">账号</string>
    <string name="text_login_password">密码</string>
    <string name="text_login_action">登陆</string>
    <string name="text_login_goto_register">还没有账号？去注册</string>

    <string name="text_register_title">注册</string>
    <string name="text_register_account">账号</string>
    <string name="text_register_email">邮箱</string>
    <string name="text_register_password">密码</string>
    <string name="text_register_repeat_password">重复输入密码</string>
    <string name="text_register_action">注册</string>
    <string name="text_register_goto_login">已经有账号了？去登陆</string>

    <string name="title_topic">讨论</string>
    <string name="title_message">消息</string>
    <string name="title_profile">资料</string>

    <string name="title_detail">主题详情</string>

    <string-array name="home_tabs">
        <item>@string/title_topic</item>
        <item>@string/title_message</item>
        <item>@string/title_profile</item>
    </string-array>

    <!--<string name="error_account_length">账号必须在%d-%d之间</string>-->
    <!--<string name="error_password_length">账号必须在%d-%d之间</string>-->
    <string name="error_password_repeat">两次输入的密码不一致</string>
    <string name="error_title_len">标题长度需要在5~40之中</string>
    <string name="error_content_len">内容长度需要</string>
    <string name="test_content">去年夏天我们启动了 Android Experiments ：一个用于展示创新性 Android 作品的项目。所有开发者都可以提交你的创意作品，通过后将加入到网站收录中。目前为止，我们见到了许多来自开发者社区的惊人作品，从动态壁纸到表盘，再到 IOIO 板子的有趣玩法，我们期望看到更多这种作品。  今天我们宣布 Android Experiments I/O 挑战赛：一个让你的作品(和你)参加 I/O 2016 的机会！</string>
    <string name="test_title">2016 Android Experiments I/O 挑战赛!</string>
    <string name="text_loading">加载中…</string>
    <string name="text_cancel">取消</string>
    <string name="text_click_load_more">点击加载更多</string>
    <string name="text_click_no_more">没有更多数据了</string>
    <string name="text_click_retry">加载失败，点击重试</string>
    <string name="test_reply">说得真好!!!</string>
    <string name="test_time">两天前</string>
    <string name="test_message">xxx在yyy主题回复了你</string>
    <string name="test_name">xxx</string>
    <string name="hint_reply">输入回复内容</string>
    <string name="hint_new_title">请输入标题</string>
    <string name="hint_new_content">请输入主题内容，不少于20字</string>
    <string name="hint_new_category">请选择主题分类：</string>

    <string name="alert_post_topic">正在发表主题</string>
    <string name="alert_load_info">正在加载一些信息</string>
    <string name="alert_send_reply">回复正在发送中</string>
    <string name="alert_please_wait">请稍后</string>
    <string name="alert_login">正在登陆中…</string>
    <string name="alert_register">正在注册中…</string>

    <string name="toast_post_topic_success">发表主题成功</string>
    <string name="toast_post_topic_error">发表主题失败</string>
    <string name="toast_reply_success">回复主题成功</string>
    <string name="toast_register_success">注册成功</string>
    <string name="text_post_topic_action">发布主题</string>
    <string name="text_profile_qq">QQ</string>
    <string name="text_profile_email">Email</string>
    <string name="text_profile_name">姓名</string>
    <string name="text_profile_age">年龄</string>
    <string name="text_profile_home">家乡</string>
    <string name="text_profile_sex">性别</string>
    <string name="text_profile_college">学院</string>
    <string name="text_profile_introduction">简介</string>
    <string name="text_switch_account">切换账号</string>
    <string name="text_logout">注销登陆</string>
    <string name="text_title_account">当前登陆的账号：</string>
    <string name="text_option_account">操作:</string>
    <string name="text_exit">退出程序</string>

    <string-array name="topic_type">
        <item>Android</item>
        <item>Java</item>
        <item>Python</item>
    </string-array>
</resources>
