<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/account"
        style="@style/InputLayout">

        <android.support.design.widget.TextInputEditText
            style="@style/FormInput"
            android:hint="@string/text_register_account" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email"
        style="@style/InputLayout">

        <android.support.design.widget.TextInputEditText
            style="@style/FormInput"
            android:hint="@string/text_register_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password"
        style="@style/InputLayout">

        <android.support.design.widget.TextInputEditText
            style="@style/FormInput"
            android:inputType="textPassword"
            android:hint="@string/text_register_password" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/repeatPassword"
        style="@style/InputLayout">

        <android.support.design.widget.TextInputEditText
            style="@style/FormInput"
            android:hint="@string/text_register_repeat_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/registerAction"
        style="@style/SubmitButton"
        android:enabled="false"
        android:text="@string/text_register_action" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/gotoLogin"
        style="@style/LinkedTextView"
        android:text="@string/text_login_goto_register" />

</LinearLayout>