<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/text_title_account"
        android:textColor="@color/material_grey_500" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="50dp"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/material_grey_400"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_icon" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"
            android:text="@string/test_name"
            android:textColor="@color/material_grey_700"
            android:textSize="@dimen/font_mid" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="40dp"
        android:text="@string/text_option_account"
        android:textColor="@color/material_grey_500" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/logout"
        style="@style/GreenButton"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_logout"
        android:textColor="@android:color/white" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/exit"
        android:layout_margin="5dp"
        style="@style/AccentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_exit" />

</LinearLayout>