<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/titleLayout"
            style="@style/InputLayout">

            <android.support.design.widget.TextInputEditText
                style="@style/FormInput"
                android:hint="@string/hint_new_title"
                android:maxLines="2" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_new_category"
                android:textSize="@dimen/font_mid" />

            <Spinner
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/topic_type" />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/contentLayout"
            style="@style/InputLayout"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                style="@style/FormInput"
                android:layout_height="match_parent"
                android:gravity="start"
                android:hint="@string/hint_new_content" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/postTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:clickable="true"
        app:srcCompat="@drawable/ic_done_24dp" />

</android.support.design.widget.CoordinatorLayout>