<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_header_height"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_header" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_header_height"
                android:orientation="vertical">

                <FrameLayout style="@style/SettingItem">

                    <Space style="@style/ProfileLeft" />

                    <LinearLayout
                        style="@style/ProfileRight"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/simple_name"
                            android:textColor="@color/material_grey_800"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/font_content" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/simple_profile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/font_small" />

                    </LinearLayout>

                    <View
                        style="@style/Gap"
                        android:layout_gravity="bottom" />
                </FrameLayout>

                <FrameLayout style="@style/SettingItem">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/ProfileLeft"
                        android:layout_gravity="center_vertical"
                        android:text="@string/text_profile_qq"
                        android:textSize="@dimen/font_mid" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_qq"
                        style="@style/ProfileRight"
                        android:singleLine="true" />

                    <View
                        style="@style/Gap"
                        android:layout_gravity="bottom" />
                </FrameLayout>

                <FrameLayout style="@style/SettingItem">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/ProfileLeft"
                        android:layout_gravity="center_vertical"
                        android:text="@string/text_profile_email"
                        android:textSize="@dimen/font_mid" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_email"
                        style="@style/ProfileRight"
                        android:singleLine="true" />

                    <View
                        style="@style/Gap"
                        android:layout_gravity="bottom" />
                </FrameLayout>

                <FrameLayout style="@style/SettingItem">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/ProfileLeft"
                        android:layout_gravity="center_vertical"
                        android:text="@string/text_profile_name"
                        android:textSize="@dimen/font_mid" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_name"
                        style="@style/ProfileRight"
                        android:singleLine="true" />

                    <View
                        style="@style/Gap"
                        android:layout_gravity="bottom" />
                </FrameLayout>

                <FrameLayout style="@style/SettingItem">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/ProfileLeft"
                        android:layout_gravity="center_vertical"
                        android:text="@string/text_profile_age"
                        android:textSize="@dimen/font_mid" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/edit_age"
                        style="@style/ProfileRight.Select"
                        android:singleLine="true" />

                    <View
                        style="@style/Gap"
                        android:layout_gravity="bottom" />
                </FrameLayout>


                <FrameLayout style="@style/SettingItem">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/ProfileLeft"
                        android:layout_gravity="center_vertical"
                        android:text="@string/text_profile_home"
                        android:textSize="@dimen/font_mid" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_home"
                        style="@style/ProfileRight"
                        android:singleLine="true" />

                    <View
                        style="@style/Gap"
                        android:layout_gravity="bottom" />
                </FrameLayout>

                <FrameLayout style="@style/SettingItem">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/ProfileLeft"
                        android:layout_gravity="center_vertical"
                        android:text="@string/text_profile_sex"
                        android:textSize="@dimen/font_mid" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/edit_sex"
                        style="@style/ProfileRight.Select"
                        android:singleLine="true" />

                    <View
                        style="@style/Gap"
                        android:layout_gravity="bottom" />
                </FrameLayout>

                <FrameLayout style="@style/SettingItem">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/ProfileLeft"
                        android:layout_gravity="center_vertical"
                        android:text="@string/text_profile_college"
                        android:textSize="@dimen/font_mid" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_college"
                        style="@style/ProfileRight"
                        android:singleLine="true" />

                    <View
                        style="@style/Gap"
                        android:layout_gravity="bottom" />
                </FrameLayout>

                <FrameLayout style="@style/SettingItem">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/ProfileLeft"
                        android:layout_gravity="center_vertical"
                        android:text="@string/text_profile_introduction"
                        android:textSize="@dimen/font_mid" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_introduction"
                        style="@style/ProfileRight" />

                    <View
                        style="@style/Gap"
                        android:layout_gravity="bottom" />
                </FrameLayout>

            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar"
                style="@style/Clickable"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="@dimen/profile_avatar_margin_top"
                android:clickable="false"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_icon"
                app:civ_border_color="@color/material_white"
                app:civ_border_width="1dp" />

        </FrameLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.v4.widget.SwipeRefreshLayout>